# sphNotificator

./: .gitignore  Cargo.toml
src/: config.rs  main.rs  messenger.rs  notification_bot.rs  sph_scraper.rs
